# simple-serial-monitor

./: .coverage  .flake8  .gitignore  LICENSE  README.md  archive_logs.py  check_crlf.py  config.txt  coverage.xml  formatter.py  monitor  monitor.py  omni_formatter.py  pyproject.toml  requirements-dev.txt  requirements.txt  run-clang-format.py  run-cmake-format.py  timestamp
.github/workflows/: ci.yaml  ci.yml
docs/: README.md  architecture.md  code-formatter.md  crlf-checker.md  installation.md  serial-monitor.md  timestamp-converter.md
docs/examples/: embedded-projects.md  troubleshooting.md
src/embedded_cereal_bowl/: __init__.py  archive_logs.py  check_crlf.py  cli.py
src/embedded_cereal_bowl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/embedded_cereal_bowl/formatter/: __init__.py  formatter.py
src/embedded_cereal_bowl/monitor/: __init__.py  monitor.py
src/embedded_cereal_bowl/timestamp/: __init__.py  timestamp.py
src/embedded_cereal_bowl/utils/: __init__.py  color_utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_color_utils.py  test_formatter.py  test_monitor.py  test_timestamp.py  test_utilities.py
tests/integration/: test_serial_integration.py
