[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedded-cereal-bowl"
version = "0.1.0"
description = "A collection of lightweight Python utilities for embedded development"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Lucas Hutch", email = "lucas@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "Topic :: Terminals :: Serial",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
    "regex>=2022.0.0",
    "colorama>=0.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "bandit>=1.7",
    "build>=0.8.0",
]

[project.scripts]
monitor = "embedded_cereal_bowl.cli:main_monitor"
timestamp = "embedded_cereal_bowl.cli:main_timestamp"
check-crlf = "embedded_cereal_bowl.cli:main_check_crlf"
format-code = "embedded_cereal_bowl.cli:main_formatter"

[project.urls]
Homepage = "https://github.com/lucashutch/simple-serial-monitor"
Repository = "https://github.com/lucashutch/simple-serial-monitor"
Issues = "https://github.com/lucashutch/simple-serial-monitor/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "serial.*",
    "regex.*",
    "colorama.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=40",
]